--- a/templates/yt_scroller.html
+++ b/templates/yt_scroller.html
@@ -6,9 +6,9 @@
   <script type="text/javascript" src="/static/js/scroller/yt-scroller.js"></script>    
   <script type="text/javascript">
     var params = { allowScriptAccess: "always" };
-    var atts = { id: "anno-video" };
-    swfobject.embedSWF("http://www.youtube.com/v/8jEaFV5PY2s?enablejsapi=1&playerapiid=anno-video&version=3",
-                       "anno-video", 
+    var atts = { id: "video" };
+    swfobject.embedSWF("http://www.youtube.com/v/8jEaFV5PY2s?enablejsapi=1&playerapiid=video&version=3",
+                       "video", 
                        "640",
                        "360",
                        "8", 
@@ -26,10 +26,10 @@
 </div>
 <div class="content-wrapper">
   <div class="box" id="video-box">
-      <div id="anno-video">
+      <div id="video">
         You need Flash player 8+ and JavaScript enabled to view this video.
       </div>
-  </div><div id="anno-video-scroller" class="box">
+  </div><div id="video-scroller" class="box">
   <div class="scrollbar"><div class="track"><div class="thumb"><div class="end"></div></div></div></div>
 	<div class="viewport">
 		<div class="overview">
@@ -43,9 +43,11 @@
 
 <p>And now to simplify this. And the only reason why I could just remove those parenthesis is I have a positive right over here. If this were a negative sign I would have to distribute the negative in order to get rid of those parenthesis. 
 
-<p>With that out of the way lets simplify this. And to simplify this I wanna essentially add terms that have the same order, or if they have multiple variables they have the same variables in the same order; raised to the same exponents.
+<p><span class="timestop" data-time="49">&#x25B8;</span>
+With that out of the way lets simplify this. And to simplify this I wanna essentially add terms that have the same order, or if they have multiple variables they have the same variables in the same order; raised to the same exponents.
 
-<p>So here I have <span class='math'>4x<sup>2</sup>y</span>. Do I have any other <span class='math'>x<sup>2</sup>y</span> terms? so ...
+<p><span class="timestop" data-time="1:04">&#x25B8;</span>
+So here I have <span class='math'>4x<sup>2</sup>y</span>. Do I have any other <span class='math'>x<sup>2</sup>y</span> terms? so ...
 
 <p>This right over here is another <span class='math'>x<sup>2</sup>y</span> term. So I can add <span class='math'>4x<sup>2</sup>y</span> plus two more <span class='math'>x<sup>2</sup>y</span> and I get <span class='math'>6x<sup>2</sup>y</span>.
 
