fixed a scroller bug, added some cool hover effects

--- a/templates/yt_scroller.html
+++ b/templates/yt_scroller.html
@@ -3,6 +3,7 @@
   <title>oh hi</title>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="/static/js/swfobject.js"></script>    
+  <script type="text/javascript" src="/static/js/yt_effects.js"></script>    
   <script type="text/javascript" src="/static/js/scroller/yt-scroller.js"></script>    
   <script type="text/javascript">
     var params = { allowScriptAccess: "always" };
@@ -33,15 +34,15 @@
   <div class="scrollbar"><div class="track"><div class="thumb"><div class="end"></div></div></div></div>
 	<div class="viewport">
 		<div class="overview">
-<p>So we have these two; or we actually have this one expression here that we need to add:
+<p><span class="timestop" data-time="0">&#x25B8;</span>So we have these two; or we actually have this one expression here that we need to add:
 
 <p class='math'>(4x<sup>2</sup>y - 3x<sup>2</sup> - 2y) + (8xy - 3x<sup>2</sup> + 2x<sup>2</sup>y + 4)
 
-<p>let me rewrite it. And since we're adding this second expression right here in parenthesis we can actually get rid of those parenthesis. We can essentially distribute that positive sign. so we get:
+<p><span class="timestop" data-time="13">&#x25B8;</span>let me rewrite it. And since we're adding this second expression right here in parenthesis we can actually get rid of those parenthesis. We can essentially distribute that positive sign. so we get:
 
 <p class="math">4x<sup>2</sup>y - 3x<sup>2</sup> - 2y + 8xy - 3x<sup>2</sup> + 2x<sup>2</sup>y + 4
 
-<p>And now to simplify this. And the only reason why I could just remove those parenthesis is I have a positive right over here. If this were a negative sign I would have to distribute the negative in order to get rid of those parenthesis. 
+<p><span class="timestop" data-time="39">&#x25B8;</span>And now to simplify this. And the only reason why I could just remove those parenthesis is I have a positive right over here. If this were a negative sign I would have to distribute the negative in order to get rid of those parenthesis. 
 
 <p><span class="timestop" data-time="49">&#x25B8;</span>
 With that out of the way lets simplify this. And to simplify this I wanna essentially add terms that have the same order, or if they have multiple variables they have the same variables in the same order; raised to the same exponents.
@@ -49,17 +50,17 @@ With that out of the way lets simplify this. And to simplify this I wanna essent
 <p><span class="timestop" data-time="1:04">&#x25B8;</span>
 So here I have <span class='math'>4x<sup>2</sup>y</span>. Do I have any other <span class='math'>x<sup>2</sup>y</span> terms? so ...
 
-<p>This right over here is another <span class='math'>x<sup>2</sup>y</span> term. So I can add <span class='math'>4x<sup>2</sup>y</span> plus two more <span class='math'>x<sup>2</sup>y</span> and I get <span class='math'>6x<sup>2</sup>y</span>.
+<p><span class="timestop" data-time="1:12">&#x25B8;</span>This right over here is another <span class='math'>x<sup>2</sup>y</span> term. So I can add <span class='math'>4x<sup>2</sup>y</span> plus two more <span class='math'>x<sup>2</sup>y</span> and I get <span class='math'>6x<sup>2</sup>y</span>.
 
-<p>Now lets go to this <span class='math'>x<sup>2</sup></span> term right over here. Do I have any other <span class='math'>x<sup>2</sup></span> terms? 
+<p><span class="timestop" data-time="1:23">&#x25B8;</span>Now lets go to this <span class='math'>x<sup>2</sup></span> term right over here. Do I have any other <span class='math'>x<sup>2</sup></span> terms? 
 
-<p>Well I have this one right over here. Another <span class='math'>-3x<sup>2</sup></span>. So if I have <span class='math'>-3x<sup>2</sup></span> minus <span class='math'>3x<sup>2</sup></span>  that's going to be <span class='math'>-6x<sup>2</sup></span>.
+<p><span class="timestop" data-time="1:30">&#x25B8;</span>Well I have this one right over here. Another <span class='math'>-3x<sup>2</sup></span>. So if I have <span class='math'>-3x<sup>2</sup></span> minus <span class='math'>3x<sup>2</sup></span>  that's going to be <span class='math'>-6x<sup>2</sup></span>.
 
-<p>And then I have this (let me do it in orange) I have this first degree <span class='math'>y</span>  term. It looks like it's the only one, so then I'll just rewrite it: <span class='math'>-2y</span>.
+<p><span class="timestop" data-time="1:41">&#x25B8;</span>And then I have this (let me do it in orange) I have this first degree <span class='math'>y</span>  term. It looks like it's the only one, so then I'll just rewrite it: <span class='math'>-2y</span>.
 
-<p>And then, this looks like the only <span class='math'>xy</span>  term right over here so I'll just rewrite it: <span class='math'>+8xy</span>.
+<p><span class="timestop" data-time="1:53">&#x25B8;</span>And then, this looks like the only <span class='math'>xy</span>  term right over here so I'll just rewrite it: <span class='math'>+8xy</span>.
 
-<p>And then finally I have the <span class='math'>+4</span>. And it looks like this is done!
+<p><span class="timestop" data-time="2:02">&#x25B8;</span>And then finally I have the <span class='math'>+4</span>. And it looks like this is done!
 
 <p class='math'>6x<sup>2</sup>y -6x<sup>2</sup> -2y +8xy +4
       </div>
