--- a/static/css/yt-scroller.css
+++ b/static/css/yt-scroller.css
@@ -14,7 +14,7 @@ html, body{
     font-size: 4em;
     line-height: 1em;
     font-weight: 500;
-    color: #85B399;
+    color: #FFE6C0;
     text-shadow: 0 -1px 0 rgba(200,255,210,0.5);
 }
 
