--- a/templates/yt_vid.html
+++ b/templates/yt_vid.html
@@ -3,6 +3,7 @@
   <title>{{ vid.name }}</title>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="/static/js/swfobject.js"></script>    
+  <script type="text/javascript" src="/static/js/djangoajax.js"></script>    
   <script type="text/javascript" src="/static/js/yt_effects.js"></script>    
   <script type="text/javascript" src="/static/js/yt_edit.js"></script>    
   <script type="text/javascript" src="/static/js/scroller/yt-scroller.js"></script>    
@@ -40,9 +41,9 @@
           {% if timestop.time %}
             <span class="hover timestop" data-time="{{ timestop.time }}">&#x25B8;</span>
           {% endif %}
-          {{ timestop.html }}
+          <span class="textcontent" contenteditable="true">{{ timestop.html }}</span>
           {% if edit %}
-            <span class="hover ts-edit" data-url="/yt_scroller/ajax/update_time/{{ vid.id }}/{{ timestop.id }}">&#x2714;
+            <span class="hover ts-edit" data-url="/yt_scroller/ajax/update_time/{{ vid.id }}/{{ timestop.id }}/">&#x2714;
               <span class="edbox">
                 <input type="text" maxlength="5" width="4"  value="{{ timestop.time }}"</input>
                 <span class="submit ebutton">&#x2714;</span>
