--- a/static/css/yt-scroller.css
+++ b/static/css/yt-scroller.css
@@ -134,3 +134,41 @@ html, body{
 .edbox input{
     width: 3em;
 }
+.controls{
+    cursor: pointer;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1.5em;
+}
+.controls span{
+    display: block;
+}
+.controls .remove{
+    border: 2px solid rgba(200,45,12,0.5);
+    background-color: rgba(200,45,12,0.1);
+    color: rgba(78,0,0,0.6);
+}
+.controls .addnew{
+    border: 2px solid rgba(45,200,12,0.5);
+    background-color: rgba(45,200,12,0.1);
+    color: rgba(0,78,0,0.6);
+}
+.messagebox{
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: 2px solid rgba(200,45,12,0.5);
+    background-color: rgba(200,45,12,0.1);
+    color: rgba(78,0,0,0.6);
+}
+.messagebox .close{
+    cursor: pointer;
+    width: 1.5em;
+    display: inline-block;
+}
+.messagebox .message{
+    padding: 0 3px;
+}
