--- a/templates/yt_index.html
+++ b/templates/yt_index.html
@@ -2,6 +2,7 @@
 <head>
   <title>scroller demos</title>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+  <script type="text/javascript" src="/static/js/djangoajax.js"></script>    
   <script type="text/javascript" src="/static/js/swfobject.js"></script>    
   <script type="text/javascript" src="/static/js/scroller/yt-scroller.js"></script>    
   <script type="text/javascript" src="/static/js/yt_edit.js"></script>    
@@ -12,13 +13,29 @@
     <h1>demos</h1>
 </div>
 <div class="content-wrapper">
-  <div id="video-scroller" class="box">
+  <div id="video-scroller" class="box v-list">
   <div class="scrollbar"><div class="track"><div class="thumb"><div class="end"></div></div></div></div>
 	<div class="viewport">
+        {% if edit %}
+        <div class="controls">
+            <span class="addnew">+</span>
+            <span class="remove">-</span>
+        </div>
+        <span class="messagebox"><span class="message"></span><span class="close">&#x2716;</span></span>
+        {% endif %}
 		<div class="overview">
           {% for vid in vids %}
-          <p>
-          <a href="{{ vid.vid_id }}">{{ vid.name }}</a>
+          <p class="vid-listing">
+            <a href="{{ vid.vid_id }}">{{ vid.name }}</a>
+            {% if edit %}
+            <span class="hover ts-edit" data-url="/yt_scroller/ajax/update_time/{{ vid.id }}/{{ timestop.id }}/">&#x2714;
+              <span class="edbox">
+                <input type="text" maxlength="15" width="9"  value="{{ timestop.time }}"</input>
+                <span class="submit ebutton">&#x2714;</span>
+                <span class="close ebutton">&#x2716;</span>
+              </span>
+            </span>
+            {% endif %}
           {% endfor %}
           <p class="addnew">+</p>
       </div>
