fixed new video creation - including a bug which allowed no new lyrics to be added

--- a/templates/yt_vid.html
+++ b/templates/yt_vid.html
@@ -59,6 +59,21 @@
             </span>
           {% endif %}  
         {% endfor %}
+        {% if edit %}
+        {% if not timestops %}
+            <p>
+            <span class="hover timestop" data-time="0">&#x25B8;</span>
+            <span class="textcontent" contenteditable="true">add some text here</span>
+            <span class="hover ts-edit" data-url="/yt_scroller/ajax/update_time/{{ vid.id }}/1/">&#x2714;
+              <span class="edbox">
+                <input type="text" maxlength="5" width="4"  value="0"</input>
+                <span class="submit ebutton">&#x2714;</span>
+                <span class="close ebutton">&#x2716;</span>
+              </span>
+            </span>
+        {% endif %}
+            <p class="addnew">+</p>
+        {% endif %}
       </div>
 	</div>
   </div>
