slightly imporved text editing

--- a/templates/yt_index.html
+++ b/templates/yt_index.html
@@ -5,7 +5,7 @@
   <script type="text/javascript" src="/static/js/djangoajax.js"></script>    
   <script type="text/javascript" src="/static/js/swfobject.js"></script>    
   <script type="text/javascript" src="/static/js/scroller/yt-scroller.js"></script>    
-  <script type="text/javascript" src="/static/js/yt_edit.js"></script>    
+  <script type="text/javascript" src="/static/js/yt-edit.js"></script>    
   <link rel="stylesheet" type="text/css" href="/static/css/yt-scroller.css" />
 </head>
 <body>
