--- a/templates/yt_vid.html
+++ b/templates/yt_vid.html
@@ -4,7 +4,7 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
   <script type="text/javascript" src="/static/js/swfobject.js"></script>    
   <script type="text/javascript" src="/static/js/djangoajax.js"></script>    
-  <script type="text/javascript" src="/static/js/yt_edit.js"></script>    
+  <script type="text/javascript" src="/static/js/yt-edit.js"></script>    
   <script type="text/javascript" src="/static/js/scroller/yt-scroller.js"></script>    
   <script type="text/javascript">
     var params = { allowScriptAccess: "always" };
