--- a/templates/yt_index.html
+++ b/templates/yt_index.html
@@ -6,6 +6,11 @@
   <script type="text/javascript" src="/static/js/swfobject.js"></script>    
   <script type="text/javascript" src="/static/js/scroller/yt-scroller.js"></script>    
   <script type="text/javascript" src="/static/js/yt-edit.js"></script>    
+  <script type="text/javascript">
+    $(function(){
+        $('#video-scroller').tinyscrollbar();
+    });
+  </script>  
   <link rel="stylesheet" type="text/css" href="/static/css/yt-scroller.css" />
 </head>
 <body>
@@ -13,6 +18,9 @@
     <h1>demos</h1>
 </div>
 <div class="content-wrapper">
+  {% if message %}
+      <h2>{{ message }}</h2>
+  {% endif %}    
   <div id="video-scroller" class="box v-list">
   <div class="scrollbar"><div class="track"><div class="thumb"><div class="end"></div></div></div></div>
 	<div class="viewport">
