--- a/static/css/yt-scroller.css
+++ b/static/css/yt-scroller.css
@@ -129,6 +129,7 @@ html, body{
     padding: 5px;
     border: 2px solid rgba(0,111,12,0.6);
     border-radius: 8px;
+    min-width: 2.5em;
 }    
 
 .v-scroll .edbox input{
